--- a/package.json
+++ b/package.json
@@ -53,7 +53,6 @@
     "react-modal": "^3.16.1",
     "react-moment": "^1.1.3",
     "react-reactions": "^0.1.3",
-    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^5.3.4",
     "react-simple-typewriter": "^5.0.1",
     "react-slick": "^0.30.2",
@@ -66,7 +65,8 @@
     "tailwind-scrollbar": "^3.1.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss-animate": "^1.0.7",
-    "use-dark-mode": "^2.3.1"
+    "use-dark-mode": "^2.3.1",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@capacitor/cli": "^6.1.0",
