--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@capacitor/core": "^6.1.0",
     "@capacitor/ios": "^6.1.0",
     "@charkour/react-reactions": "^0.11.0",
+    "@clerk/nextjs": "^4.31.8",
     "@ducanh2912/next-pwa": "^10.2.8",
     "@emailjs/browser": "^4.4.1",
     "@emotion/react": "^11.11.4",
@@ -72,6 +73,7 @@
     "@capacitor/cli": "^6.1.0",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.4",
+    "@types/react": "19.0.12",
     "react-email": "3.0.1",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.4.10",
