--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "lucide-react": "^0.400.0",
     "moment": "^2.29.4",
     "natural": "^7.0.0",
-    "next": "13.4.3",
+    "next": "^14.2.27",
     "next-auth": "^4.22.1",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.15",
