--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "react-email": "3.0.1",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.4.10",
-    "typescript": "5.6.2"
+    "typescript": "^4.9.5"
   },
   "browserslist": {
     "production": [
