--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,13 +16,16 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "target": "ES2017"
   },
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
-, "middleware.js", "pages/index.js"  ],
+    "**/*.tsx",
+    "middleware.ts",
+    "pages/index.js"
+  ],
   "exclude": [
     "node_modules"
   ]
